Final changes for errors